--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@hookstate/core": "^4.0.0",
+    "@hookstate/devtools": "^4.0.0",
     "@prisma/client": "^4.15.0",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
