--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "tailwindcss": "3.3.2",
+    "winston": "^3.10.0",
+    "winston-daily-rotate-file": "^4.7.1",
     "zod": "^3.21.4",
     "zod-formik-adapter": "^1.2.0"
   },
