--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,15 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "lib/errors/ApiError.notUsed",
+    "lib/errors/handleError.notUsed",
+    "lib/errors/handleApiError.tssdcds",
+    "lib/middlewareHelpers/withNextAuthExceptionFilter.notUsed"
+  ],
   "exclude": ["node_modules"]
 }
