--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "@hookstate/devtools": "^4.0.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^4.15.0",
-    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "clsx": "^1.2.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
