--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.5",
     "@commitlint/config-conventional": "^17.6.5",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^20.2.5",
     "cross-env": "^7.0.3",
     "husky": "^8.0.3",
