--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "clsx": "^1.2.1",
+    "date-fns": "^2.30.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "formik": "^2.4.2",
