--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "formik": "^2.4.2",
+    "framer-motion": "^10.16.0",
     "next": "^13.4.15",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
