--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-timing-hooks": "^4.0.2",
     "swiper": "^10.1.0",
     "tailwindcss": "3.3.2",
     "winston": "^3.10.0",
