--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "vitest --coverage",
     "prettier": "prettier --write .",
     "prepare": "husky install"
   },
@@ -51,12 +52,14 @@
     "@commitlint/config-conventional": "^17.6.5",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^20.2.5",
+    "@vitest/coverage-v8": "^0.34.2",
     "cross-env": "^7.0.3",
     "husky": "^8.0.3",
     "prettier": "^2.8.8",
     "prisma": "^4.15.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "vitest": "^0.34.2"
   },
   "resolutions": {
     "webpack": "^5"
