--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@hookstate/core": "^4.0.0",
     "@hookstate/devtools": "^4.0.0",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.1.1",
+    "@prisma/client": "^5.2.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
@@ -40,6 +40,7 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-timing-hooks": "^4.0.2",
+    "sharp": "^0.32.5",
     "swiper": "^10.1.0",
     "tailwindcss": "3.3.2",
     "winston": "^3.10.0",
@@ -56,7 +57,7 @@
     "cross-env": "^7.0.3",
     "husky": "^8.0.3",
     "prettier": "^2.8.8",
-    "prisma": "^4.15.0",
+    "prisma": "^5.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3",
     "vitest": "^0.34.2"
