--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lint": "next lint",
     "test": "vitest --coverage",
     "prettier": "prettier --write .",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@hookstate/core": "^4.0.0",
