--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@hookstate/devtools": "^4.0.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.2.0",
+    "@tanstack/react-table": "^8.9.7",
     "@types/bcryptjs": "^2.4.2",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
