--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-config-next": "13.4.4",
     "formik": "^2.4.2",
     "framer-motion": "^10.16.1",
+    "json-as-xlsx": "^2.5.4",
     "next": "^13.4.19",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
