--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-select": "^5.7.4",
     "react-timing-hooks": "^4.0.2",
     "sharp": "^0.32.5",
     "swiper": "^10.1.0",
