--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@hookstate/core": "^4.0.0",
     "@hookstate/devtools": "^4.0.0",
+    "@mui/material": "^5.14.10",
+    "@mui/x-date-pickers": "^6.15.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.3.1",
     "@tanstack/react-table": "^8.9.7",
@@ -36,7 +40,7 @@
     "formik": "^2.4.2",
     "framer-motion": "^10.16.1",
     "json-as-xlsx": "^2.5.4",
-    "next": "^13.4.19",
+    "next": "^13.5.3",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
