--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-quill": "^2.0.0",
     "react-select": "^5.7.4",
     "react-timing-hooks": "^4.0.2",
     "sharp": "^0.32.5",
@@ -53,7 +54,7 @@
     "tailwindcss": "3.3.2",
     "winston": "^3.10.0",
     "winston-daily-rotate-file": "^4.7.1",
-    "zod": "^3.21.4",
+    "zod": "^3.22.3",
     "zod-formik-adapter": "^1.2.0"
   },
   "devDependencies": {
