--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/sortable": "^7.0.2",
+    "@dnd-kit/utilities": "^3.2.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hookstate/core": "^4.0.0",
@@ -54,6 +57,7 @@
     "tailwindcss": "3.3.2",
     "winston": "^3.10.0",
     "winston-daily-rotate-file": "^4.7.1",
+    "yup": "^1.3.2",
     "zod": "^3.22.3",
     "zod-formik-adapter": "^1.2.0"
   },
