--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@prisma/client": "^5.3.1",
     "@tanstack/react-table": "^8.9.7",
     "@types/bcryptjs": "^2.4.2",
+    "@types/dropzone": "^5.7.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
@@ -48,6 +49,7 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
     "react-quill": "^2.0.0",
     "react-select": "^5.7.4",
