--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.441.0",
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
     "@dnd-kit/utilities": "^3.2.1",
@@ -35,6 +36,7 @@
     "@types/lodash": "^4.14.199",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
+    "@uploadthing/react": "^5.7.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
@@ -59,6 +61,7 @@
     "sharp": "^0.32.5",
     "swiper": "^10.1.0",
     "tailwindcss": "3.3.2",
+    "uploadthing": "^5.7.4",
     "winston": "^3.10.0",
     "winston-daily-rotate-file": "^4.7.1",
     "yup": "^1.3.2",
