--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "swiper": "^10.1.0",
     "tailwindcss": "3.3.2",
     "uploadthing": "^5.7.4",
+    "usehooks-ts": "^2.9.1",
     "winston": "^3.10.0",
     "winston-daily-rotate-file": "^4.7.1",
     "yup": "^1.3.2",
