--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "yarn": "please-use-npm"
   },
   "scripts": {
-    "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
+    "dev": "cross-env NODE_OPTIONS='--inspect' next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -18,71 +18,71 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.441.0",
-    "@axiomhq/winston": "^1.0.0-rc.1",
-    "@dnd-kit/core": "^6.0.8",
-    "@dnd-kit/sortable": "^7.0.2",
-    "@dnd-kit/utilities": "^3.2.1",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@hookstate/core": "^4.0.0",
-    "@hookstate/devtools": "^4.0.0",
-    "@mui/material": "^5.14.13",
-    "@mui/x-date-pickers": "^6.15.0",
+    "@aws-sdk/client-s3": "^3.609.0",
+    "@axiomhq/winston": "^1.0.0",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@hookstate/core": "^4.0.1",
+    "@hookstate/devtools": "^4.0.1",
+    "@mui/lab": "^5.0.0-alpha.171",
+    "@mui/material": "^5.16.0",
+    "@mui/x-date-pickers": "^7.9.0",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.11.0",
-    "@tanstack/react-table": "^8.9.7",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/dropzone": "^5.7.5",
-    "@types/lodash": "^4.14.199",
-    "@types/react": "18.2.8",
-    "@types/react-dom": "18.2.4",
-    "@uploadthing/react": "^5.7.0",
+    "@prisma/client": "^5.16.1",
+    "@tanstack/react-table": "^8.19.2",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/dropzone": "^5.7.8",
+    "@types/lodash": "^4.17.6",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "autoprefixer": "10.4.14",
-    "axios": "^1.4.0",
+    "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
-    "clsx": "^1.2.1",
+    "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
-    "date-fns-tz": "^2.0.0",
-    "eslint": "8.42.0",
-    "eslint-config-next": "13.4.4",
-    "formik": "^2.4.2",
-    "framer-motion": "^10.16.1",
-    "json-as-xlsx": "^2.5.4",
+    "date-fns-tz": "^3.1.3",
+    "eslint": "^8.42.0",
+    "eslint-config-next": "^13.4.4",
+    "formik": "^2.4.6",
+    "framer-motion": "^11.2.13",
+    "json-as-xlsx": "^2.5.6",
     "lodash": "^4.17.21",
-    "next": "^13.5.6",
-    "next-auth": "^4.22.1",
+    "next": "^14.2.4",
+    "next-auth": "^4.24.7",
     "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
     "react-quill": "^2.0.0",
     "react-select": "^5.7.4",
     "react-timing-hooks": "^4.0.2",
-    "sharp": "^0.32.6",
-    "swiper": "^10.1.0",
+    "sharp": "^0.33.4",
+    "swiper": "^10.3.1",
     "tailwindcss": "3.3.2",
-    "usehooks-ts": "^2.9.1",
-    "winston": "^3.10.0",
-    "winston-daily-rotate-file": "^4.7.1",
-    "yup": "^1.3.2",
-    "zod": "^3.22.3",
-    "zod-formik-adapter": "^1.2.0"
+    "usehooks-ts": "^3.1.0",
+    "winston": "^3.13.0",
+    "winston-daily-rotate-file": "^5.0.0",
+    "yup": "^1.4.0",
+    "zod": "^3.23.8",
+    "zod-formik-adapter": "^1.3.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.6.5",
-    "@commitlint/config-conventional": "^17.6.5",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@tailwindcss/typography": "^0.5.9",
-    "@types/node": "^20.2.5",
-    "@vitest/coverage-v8": "^1.4.0",
+    "@types/node": "^20.14.10",
+    "@vitest/coverage-v8": "^1.6.0",
     "cross-env": "^7.0.3",
-    "husky": "^8.0.3",
-    "prettier": "^2.8.8",
-    "prisma": "^5.11.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.3",
-    "vitest": "^1.4.0"
+    "husky": "^9.0.11",
+    "prettier": "^3.3.2",
+    "prisma": "^5.16.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.3",
+    "vitest": "^1.6.0"
   },
   "resolutions": {
     "webpack": "^5"
