--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "yarn": "please-use-npm"
   },
   "scripts": {
-    "dev": "cross-env NODE_OPTIONS='--inspect' next dev --turbo",
+    "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -46,17 +46,17 @@
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
     "eslint": "^9.39.1",
-    "eslint-config-next": "^16.0.7",
+    "eslint-config-next": "^15.5.9",
     "formik": "^2.4.9",
     "framer-motion": "^12.23.25",
     "json-as-xlsx": "^2.5.6",
     "lodash": "^4.17.21",
-    "next": "16.0.10",
+    "next": "^15.5.9",
     "next-auth": "^4.24.13",
     "postcss": "8.4.24",
     "quill": "^1.3.7",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.6.0",
     "react-quill": "^2.0.0",
