--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "date-fns-tz": "^2.0.0",
     "eslint": "^9.39.1",
     "eslint-config-next": "^15.5.9",
+    "feed": "^5.1.0",
     "formik": "^2.4.9",
     "framer-motion": "^12.23.25",
     "json-as-xlsx": "^2.5.6",
