--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=7.23.0",
-    "yarn": "please-use-npm"
+    "yarn": "please-use-npm",
+    "pnpm": "please-use-npm"
   },
   "scripts": {
     "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
