--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "pnpm": "please-use-npm"
   },
   "scripts": {
-    "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
+    "dev": "cross-env NODE_OPTIONS='--inspect' next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -73,7 +73,8 @@
     "winston-daily-rotate-file": "^5.0.0",
     "yup": "^1.4.0",
     "zod": "^3.23.8",
-    "zod-formik-adapter": "^1.3.0"
+    "zod-formik-adapter": "^1.3.0",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
